# finguard

./: .gitignore  .vercelignore  README.md  alembic.ini  app.py  data_handler.py  database.py  db_models.py  main.py  model.py  pyproject.toml  requirements.txt  risk_engine.py  schemas.py  services.py  simulation.py
alembic/: env.py
alembic/versions/: 0001_create_transactions.py
app/: __init__.py  main.py
app/api/: dependencies.py  routes.py
app/core/: exceptions.py  security.py  settings.py
app/db/: bootstrap.py  session.py
app/models/: transaction.py  user.py  user_session.py
app/schemas/: auth.py  transaction.py
app/services/: analysis_service.py  auth_service.py  dashboard_service.py  transaction_service.py
static/css/: styles.css
static/js/: app.js  auth.js
templates/: index.html  login.html
tests/: test_api.py  test_risk_engine.py  test_simulation.py
