[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finguard"
version = "1.1.0"
description = "AI financial safety net built with FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlalchemy>=2.0.0",
  "jinja2>=3.1.0",
  "pandas>=2.0.0",
  "scikit-learn>=1.3.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.14.0",
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
  "black>=24.10.0",
  "mypy>=1.13.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
